syntax = "proto3";

option csharp_namespace = "DiscountManager.Core";

package DiscountManager;

// The discount service definition.
service Discount {
  // Get discount codes
  rpc GetCodes (GetCodesRequest) returns (GetCodesReply);

  // Create discount codes
  rpc CreateCodes (CreateCodesRequest) returns (CreatedCodesReply);
  
  // Code usage
  rpc UseCode (UseCodeRequest) returns (UseCodeReply);

}

// The request message containing the generations options.
message GetCodesRequest { }

// The response message containing the generate result.
message GetCodesReply {
  bytes result = 1;
}

// The request message containing the generations options.
message CreateCodesRequest {
  uint32 count = 1;
  bytes length = 2;
}

// The response message containing the generate result.
message CreatedCodesReply {
  bool result = 1;
}


// The request message containing the requested code.
message UseCodeRequest {
  string code = 1;
}

// The response message containing the code response.
message UseCodeReply {
  bytes result = 1;
}
